--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,48 @@
-
+absl-py==0.12.0
+aiohttp==3.7.4.post0
+async-timeout==3.0.1
+attrs==20.3.0
+cachetools==4.2.1
+certifi==2020.12.5
+chardet==4.0.0
+click==7.1.2
+filelock==3.0.12
+fsspec==0.9.0
+future==0.18.2
+google-auth==1.28.1
+google-auth-oauthlib==0.4.4
+grpcio==1.37.0
+idna==2.10
+joblib==1.0.1
+Markdown==3.3.4
+multidict==5.1.0
+numpy @ file:///home/conda/feedstock_root/build_artifacts/numpy_1616933154495/work
+oauthlib==3.1.0
+olefile @ file:///home/conda/feedstock_root/build_artifacts/olefile_1602866521163/work
+packaging==20.9
+Pillow @ file:///tmp/build/80754af9/pillow_1617385572585/work
+protobuf==3.15.8
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pyparsing==2.4.7
+pytorch-lightning==1.2.7
+PyYAML==5.3.1
+regex==2021.4.4
+requests==2.25.1
+requests-oauthlib==1.3.0
+rsa==4.7.2
+sacremoses==0.0.44
+six==1.15.0
+tensorboard==2.4.1
+tensorboard-plugin-wit==1.8.0
+tokenizers==0.10.2
+torch==1.8.1
+torchaudio==0.8.0a0+e4e171a
+torchmetrics==0.2.0
+torchvision==0.9.1
+tqdm==4.60.0
+transformers==4.5.0
+typing-extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1602702424206/work
+urllib3==1.26.4
+Werkzeug==1.0.1
+yarl==1.6.3
